# slibed

backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/chat/: __init__.py  functions.py  routes.py  schemas.py
backend/app/db/: events.py  models.py  session.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  styles.css
frontend/src/components/ui/: button.jsx  input.jsx  separator.jsx  textarea.jsx
